# Zephyr_STM32F429

./: CMakeLists.txt  README.md  STM32F429-Discovery.ioc  STM32F429I-DISC1时钟配置信息.md  dts.template  prj.conf  stm32f429i_disc1.overlay  老款STM32F429I-DISCO-B01 FMC设置.md  老款STM32F429I-DISCO显示屏.md
DataSheet/MB1075B/: IO Peripherals.SchDoc  LCD-24.SchDoc  MB1075.PrjPCB  MB1075.PrjPCBStructure  MB1075.SchDoc  SDRAM.SchDoc  STM32Fx.SchDoc  ST_LINK_V2.SCHDOC  USB_OTG_FS.SchDoc
DataSheet/MB1075B/CADSTAR/: MB1075.PCB
drivers/: l3gd20.c  l3gd20_spi.c
drivers/include/: l3gd20.h  ssd1306_regs.h
dts/bindings/: vendor-prefixes.txt
dts/bindings/sensor/: st,l3gd20.yaml
include/: display_thread.h  led_thread.h  self_test.h
src/: dietemp_thread.c  display_thread.c  gyro_thread.c  led_thread.c  self_test_thread.c
